# ci-lab-variant-5

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
ci_lab/: __init__.py  math_tools.py  text_tools.py
tests/: test_math_tools.py  test_text_tools.py
