[tool.poetry]
name = "ci-lab-variant-5"
version = "0.1.0"
description = "CI laboratory work: Python, ruff, pytest-cov, poetry build"
authors = ["Student <student@example.com>"]
readme = "README.md"
packages = [{ include = "ci_lab" }]

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.dev.dependencies]
ruff = ">=0.8,<1.0"
pytest = ">=8.0,<9.0"
pytest-cov = ">=6.0,<8.0"

[build-system]
requires = ["poetry-core>=1.9.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B"]
ignore = []

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=ci_lab --cov-report=term-missing --cov-fail-under=80"
